# byers_brands_portal

./: .gitignore  .gitmodules  README.md  RUST_DID_NEW_APP_GUIDE.md  RUST_DID_NEW_APP_GUIDE2.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  test_results.txt
apps/accounts/: admin.py  apps.py  audit_models.py  did_rust_wrapper.py  forms.py  middleware.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/brand/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/brand/migrations/: 0001_initial.py  0002_project.py  0003_populate_projects.py
apps/core/: __init__.py  apps.py
apps/feedback/: admin.py  apps.py  models.py  urls.py  views.py
apps/investor/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/polly_client/: __init__.py  apps.py  client.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
core/: urls.py  wsgi.py
core/settings/: base.py  dev.py
docs/: AI_PROMPT.md  DID_RUST_IMPLEMENTATION_SUMMARY.md  PHASE2_BRAND_CAROUSEL.md  PHASE2_WEEK1.md  PHASE2_WEEK2.md  PHASE2_WEEK3.md  todo_list.txt
playwright-report/: index.html
static/js/: theme.js
templates/: base.html
templates/accounts/: profile.html  register.html
templates/brand/: contact.html  home.html  product_detail.html  products.html
tests/playwright/: conftest.py  test_accessibility.py  test_audit_logs.py  test_auth.py  test_branding_ui.py  test_carousel_navigation.py  test_dashboard.py  test_mfa.py  test_mobile.py  test_polly.py
(+23 files in other folders)
